--- a/index.html
+++ b/index.html
@@ -31,29 +31,39 @@
     </div>
   </header>
 
-  <!-- HERO -->
-  <section class="relative overflow-hidden">
-    <div class="absolute inset-0 bg-gradient-to-br from-indigo-600/20 via-fuchsia-600/20 to-transparent pointer-events-none"></div>
-    <div class="max-w-6xl mx-auto px-4 py-20 md:py-28 grid md:grid-cols-2 gap-10 items-center">
-      <div>
-        <h1 class="text-4xl md:text-6xl font-black leading-tight">Designs that sell. <span class="text-indigo-400">Ads that convert.</span></h1>
-        <p class="mt-5 text-neutral-300 max-w-xl">We create bold apparel graphics, high-performing Instagram/TikTok ad creatives, and clean mockups for your shop. Quick turnarounds. Clean files. Real results.</p>
-        <div class="mt-8 flex flex-wrap gap-3">
-          <a href="#pricing" class="px-5 py-3 rounded-xl bg-white text-neutral-900 font-semibold shadow-soft">See Packages</a>
-          <a href="#ads" class="px-5 py-3 rounded-xl bg-neutral-800 hover:bg-neutral-700 transition font-semibold">View Work</a>
-        </div>
-        <div class="mt-6 text-sm text-neutral-400">Trusted by small brands, Etsy/Shopify sellers, and local businesses.</div>
+<!-- HERO -->
+<section class="relative overflow-hidden">
+  <div class="absolute inset-0 bg-gradient-to-br from-indigo-600/20 via-fuchsia-600/20 to-transparent pointer-events-none"></div>
+  <div class="max-w-6xl mx-auto px-4 py-20 md:py-28 grid md:grid-cols-2 gap-10 items-center">
+    <div>
+      <h1 class="text-4xl md:text-6xl font-black leading-tight">
+        Creative <span class="text-indigo-400">Designs</span>.<br>
+        High-Impact <span class="text-indigo-400">Ad Creatives</span>.
+      </h1>
+      <p class="mt-5 text-neutral-300 max-w-xl">
+        We craft bold apparel designs and powerful ad creatives that capture attention and drive results. 
+        From original graphics to IG/TikTok ads, we make your brand stand out with fast turnarounds and clean files.
+      </p>
+      <div class="mt-8 flex flex-wrap gap-3">
+        <a href="#ads" class="px-5 py-3 rounded-xl bg-white text-neutral-900 font-semibold shadow-soft">See Ads</a>
+        <a href="#designs" class="px-5 py-3 rounded-xl bg-neutral-800 hover:bg-neutral-700 transition font-semibold">View Designs</a>
       </div>
-      <div class="relative">
-        <div class="aspect-[4/5] rounded-3xl bg-neutral-900 border border-white/10 shadow-soft overflow-hidden">
-          <img src="moda.png" alt="Moda showcase" class="w-full h-full object-cover opacity-90"/>
-        </div>
-        <div class="absolute -bottom-6 -left-6 w-40 md:w-48 rotate-[-6deg]">
-          <div class="bg-indigo-500 text-white text-xs md:text-sm font-bold px-4 py-3 rounded-2xl shadow-soft">24–48h draft turnaround</div>
+      <div class="mt-6 text-sm text-neutral-400">
+        Trusted by small brands, clothing lines, and local businesses.
+      </div>
+    </div>
+    <div class="relative">
+      <div class="aspect-[4/5] rounded-3xl bg-neutral-900 border border-white/10 shadow-soft overflow-hidden">
+        <img src="./hs.png" alt="Moda hoodie design" class="w-full h-full object-cover opacity-90"/>
+      </div>
+      <div class="absolute -bottom-6 -left-6 w-40 md:w-48 rotate-[-6deg]">
+        <div class="bg-indigo-500 text-white text-xs md:text-sm font-bold px-4 py-3 rounded-2xl shadow-soft">
+          24–48h draft turnaround
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- IG HIGHLIGHTS -->
   <section class="border-y border-white/5 bg-neutral-900/30">
@@ -118,19 +128,18 @@
       </div>
     </div>
 
-    <!-- IMAGE ADS (taller now) -->
-    <div class="mt-12">
-      <h3 class="text-2xl font-bold mb-4">Image Ads</h3>
-      <div class="grid sm:grid-cols-2 gap-6">
-        <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
-          <img class="w-full h-96 object-cover" src="./imagead1.png" alt="Image Ad 1" loading="lazy">
-        </div>
-        <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
-          <img class="w-full h-96 object-cover" src="./imagead2.png" alt="Image Ad 2" loading="lazy">
-        </div>
-      </div>
+<!-- IMAGE ADS -->
+<section id="image-ads" class="max-w-6xl mx-auto px-4 py-20">
+  <h2 class="text-3xl md:text-4xl font-black mb-6">Image Ads</h2>
+  <div class="grid sm:grid-cols-2 lg:grid-cols-2 gap-6">
+    <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-[550px] object-cover" src="./imagead1.png" alt="Image Ad 1"/>
     </div>
-  </section>
+    <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-[550px] object-cover" src="./imagead2.png" alt="Image Ad 2"/>
+    </div>
+  </div>
+</section>
 
   <!-- DESIGNS (grid instead of carousel) -->
   <section id="designs" class="max-w-6xl mx-auto px-4 pb-12">
