--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 <section class="relative overflow-hidden">
   <div class="absolute inset-0 bg-gradient-to-br from-indigo-600/20 via-fuchsia-600/20 to-transparent pointer-events-none"></div>
   <div class="max-w-6xl mx-auto px-4 py-20 md:py-28 grid md:grid-cols-2 gap-10 items-center">
+    
+    <!-- LEFT: MODA text + tagline -->
     <div>
-      <h1 class="text-4xl md:text-6xl font-black leading-tight">
-        Creative <span class="text-indigo-400">Designs</span>.<br>
-        High-Impact <span class="text-indigo-400">Ad Creatives</span>.
-      </h1>
-      <p class="mt-5 text-neutral-300 max-w-xl">
-        We craft bold apparel designs and powerful ad creatives that capture attention and drive results. 
-        From original graphics to IG/TikTok ads, we make your brand stand out with fast turnarounds and clean files.
+      <h1 class="text-5xl md:text-7xl font-black leading-tight mb-4">MODA</h1>
+      <p class="mt-4 text-lg md:text-xl text-neutral-300 max-w-xl">
+        Creative <span class="text-indigo-400 font-semibold">Designs</span> and
+        high-impact <span class="text-indigo-400 font-semibold">Ad Creatives</span>
+        built to make your brand stand out.  
       </p>
       <div class="mt-8 flex flex-wrap gap-3">
         <a href="#ads" class="px-5 py-3 rounded-xl bg-white text-neutral-900 font-semibold shadow-soft">See Ads</a>
@@ -52,16 +52,14 @@
         Trusted by small brands, clothing lines, and local businesses.
       </div>
     </div>
+
+    <!-- RIGHT: Moda image -->
     <div class="relative">
-      <div class="aspect-[4/5] rounded-3xl bg-neutral-900 border border-white/10 shadow-soft overflow-hidden">
-        <img src="./hs.png" alt="Moda hoodie design" class="w-full h-full object-cover opacity-90"/>
-      </div>
-      <div class="absolute -bottom-6 -left-6 w-40 md:w-48 rotate-[-6deg]">
-        <div class="bg-indigo-500 text-white text-xs md:text-sm font-bold px-4 py-3 rounded-2xl shadow-soft">
-          24–48h draft turnaround
-        </div>
+      <div class="rounded-3xl bg-neutral-900 border border-white/10 shadow-soft overflow-hidden">
+        <img src="./moda.png" alt="Moda logo design" class="w-full h-auto object-contain"/>
       </div>
     </div>
+
   </div>
 </section>
 
