--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
     
     <!-- LEFT: MODA text + tagline -->
     <div>
-      <h1 class="text-5xl md:text-7xl font-black leading-tight mb-4">MODA</h1>
+      <h1 class="text-5xl md:text-7xl font-black leading-tight mb-4 bg-gradient-to-r from-indigo-400 to-fuchsia-400 bg-clip-text text-transparent">
+        MODA
+      </h1>
       <p class="mt-4 text-lg md:text-xl text-neutral-300 max-w-xl">
         Creative <span class="text-indigo-400 font-semibold">Designs</span> and
         high-impact <span class="text-indigo-400 font-semibold">Ad Creatives</span>
-        built to make your brand stand out.  
+        built to make your brand stand out.
       </p>
       <div class="mt-8 flex flex-wrap gap-3">
         <a href="#ads" class="px-5 py-3 rounded-xl bg-white text-neutral-900 font-semibold shadow-soft">See Ads</a>
