--- a/index.html
+++ b/index.html
@@ -84,17 +84,16 @@
         <p class="mt-2 text-neutral-300">Apparel graphics, posters, and artwork tailored to your brand.</p>
         <ul class="mt-4 space-y-2 text-sm text-neutral-300 list-disc list-inside">
           <li>Unique, custom visuals</li>
-          <li>2–3 concepts + revisions</li>
-          <li>Print-ready files + mockups</li>
+          <li>Mockups for clothing lines, posters, and packaging</li>
         </ul>
       </div>
       <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
         <h3 class="font-bold text-xl">Ad Creatives</h3>
         <p class="mt-2 text-neutral-300">High-performing Instagram/TikTok visuals designed to convert.</p>
         <ul class="mt-4 space-y-2 text-sm text-neutral-300 list-disc list-inside">
-          <li>Static and short-form video ads</li>
-          <li>Optimized for Reels, Stories, and Feeds</li>
-          <li>Export packs ready for Ads Manager</li>
+          <li>Short reels for TikTok/Instagram</li>
+          <li>Eye-catching image ads </li>
+          <li>Ready-to-upload export packs for Meta Ads Manager & TikTok Ads</li>
         </ul>
       </div>
     </div>
