--- a/index.html
+++ b/index.html
@@ -74,30 +74,58 @@
     </div>
   </section>
 
-  <!-- SERVICES -->
-  <section id="services" class="max-w-6xl mx-auto px-4 py-20">
-    <h2 class="text-3xl md:text-4xl font-black">Services</h2>
-    <p class="mt-2 text-neutral-300 max-w-2xl">We specialize in bold visuals and ad-ready assets that elevate your brand.</p>
-    <div class="mt-10 grid md:grid-cols-2 gap-6">
-      <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
-        <h3 class="font-bold text-xl">Designs</h3>
-        <p class="mt-2 text-neutral-300">Apparel graphics, posters, and artwork tailored to your brand.</p>
-        <ul class="mt-4 space-y-2 text-sm text-neutral-300 list-disc list-inside">
-          <li>Unique, custom visuals</li>
-          <li>Mockups for clothing lines, posters, and packaging</li>
+  <section class="py-20 bg-black text-white">
+  <div class="max-w-6xl mx-auto px-6 text-center">
+    <h2 class="text-5xl font-extrabold mb-6 text-purple-400">Services</h2>
+    <p class="text-lg text-gray-300 mb-14">
+      We specialize in bold visuals and ad-ready assets that elevate your brand.
+    </p>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+      
+      <!-- Designs -->
+      <div class="p-10 rounded-2xl bg-neutral-900 shadow-lg hover:shadow-purple-500/40 transform hover:-translate-y-2 transition duration-300">
+        <h3 class="text-2xl font-bold text-purple-300 mb-4">Designs</h3>
+        <p class="text-gray-300 mb-6">
+          Apparel graphics, posters, and artwork tailored to your brand.
+        </p>
+        <ul class="space-y-3 text-left">
+          <li class="flex items-start">
+            <span class="text-purple-400 mr-3">✔</span>
+            Unique, custom visuals
+          </li>
+          <li class="flex items-start">
+            <span class="text-purple-400 mr-3">✔</span>
+            Mockups for clothing lines, posters, and packaging
+          </li>
         </ul>
       </div>
-      <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
-        <h3 class="font-bold text-xl">Ad Creatives</h3>
-        <p class="mt-2 text-neutral-300">High-performing Instagram/TikTok visuals designed to convert.</p>
-        <ul class="mt-4 space-y-2 text-sm text-neutral-300 list-disc list-inside">
-          <li>Short reels for TikTok/Instagram</li>
-          <li>Eye-catching image ads </li>
-          <li>Ready-to-upload export packs for Meta Ads Manager & TikTok Ads</li>
+
+      <!-- Ad Creatives -->
+      <div class="p-10 rounded-2xl bg-neutral-900 shadow-lg hover:shadow-pink-500/40 transform hover:-translate-y-2 transition duration-300">
+        <h3 class="text-2xl font-bold text-pink-300 mb-4">Ad Creatives</h3>
+        <p class="text-gray-300 mb-6">
+          High-performing Instagram/TikTok visuals designed to convert.
+        </p>
+        <ul class="space-y-3 text-left">
+          <li class="flex items-start">
+            <span class="text-pink-400 mr-3">✔</span>
+            Short reels for TikTok/Instagram
+          </li>
+          <li class="flex items-start">
+            <span class="text-pink-400 mr-3">✔</span>
+            Eye-catching image ads
+          </li>
+          <li class="flex items-start">
+            <span class="text-pink-400 mr-3">✔</span>
+            Ready-to-upload export packs for Meta Ads Manager & TikTok Ads
+          </li>
         </ul>
       </div>
+
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- ADS -->
   <section id="ads" class="max-w-6xl mx-auto px-4 pb-12">
