--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="rounded-2xl overflow-hidden border border-white/10"><img src="undrwrld.jpg" alt="Undrwrld"></div>
       <div class="rounded-2xl overflow-hidden border border-white/10"><img src="bmw.jpg" alt="BMW"></div>
-      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="skele.jpg" alt="Skeleton"></div>
+      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="skele.png" alt="Skeleton"></div>
       <div class="rounded-2xl overflow-hidden border border-white/10"><img src="horses.jpg" alt="Horses"></div>
       <div class="rounded-2xl overflow-hidden border border-white/10"><img src="dog.jpg" alt="Dog"></div>
     </div>
