--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <a href="#services" class="hover:text-white">Services</a>
         <a href="#ads" class="hover:text-white">Ads</a>
         <a href="#designs" class="hover:text-white">Designs</a>
-        <a href="#pricing" class="hover:text-white">Pricing</a>
         <a href="#contact" class="hover:text-white">Contact</a>
       </nav>
       <a href="#contact" class="hidden md:inline-flex px-4 py-2 rounded-xl bg-indigo-500 hover:bg-indigo-600 text-sm font-semibold">Get a Quote</a>
@@ -37,7 +36,8 @@
       <div class="inline-block mt-6 px-4 py-2 rounded-2xl text-sm font-bold bg-indigo-500 text-white">24–48h draft turnaround</div>
     </div>
     <div class="rounded-2xl overflow-hidden border border-white/10">
-      <img src="moda.png" alt="Moda Logo" class="w-full object-cover">
+      <!-- Make sure this fills without sidebars -->
+      <img src="moda.png" alt="Moda Logo" class="block w-full h-[420px] object-cover">
     </div>
   </section>
 
@@ -98,16 +98,32 @@
   <!-- ADS -->
   <section id="ads" class="max-w-6xl mx-auto px-6 py-20">
     <h2 class="text-3xl font-bold mb-6">Ads</h2>
+
+    <!-- Clothing Brand Ads: fixed height + cover so all fill perfectly -->
     <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-6">
-      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="hs.png" alt="Clothing Ad"></div>
-      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="ghostfit.png" alt="Ghostfit"></div>
-      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="stussy.png" alt="Stussy"></div>
-      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="statueofliberty.png" alt="Statue of Liberty"></div>
+      <div class="rounded-2xl overflow-hidden border border-white/10">
+        <img src="hs.png" alt="Clothing Ad" class="block w-full h-[420px] object-cover">
+      </div>
+      <div class="rounded-2xl overflow-hidden border border-white/10">
+        <img src="ghostfit.png" alt="Ghostfit" class="block w-full h-[420px] object-cover">
+      </div>
+      <div class="rounded-2xl overflow-hidden border border-white/10">
+        <img src="stussy.png" alt="Stussy" class="block w-full h-[420px] object-cover">
+      </div>
+      <div class="rounded-2xl overflow-hidden border border-white/10">
+        <img src="statueofliberty.png" alt="Statue of Liberty" class="block w-full h-[420px] object-cover">
+      </div>
     </div>
+
     <h3 class="text-xl font-bold mt-12 mb-4">Image Ads</h3>
     <div class="grid sm:grid-cols-2 gap-6">
-      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="imagead1.png" alt="Image Ad 1"></div>
-      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="imagead2.png" alt="Image Ad 2"></div>
+      <!-- Taller image ads; still cover to avoid letterboxing -->
+      <div class="rounded-2xl overflow-hidden border border-white/10">
+        <img src="imagead1.png" alt="Image Ad 1" class="block w-full h-[550px] object-cover">
+      </div>
+      <div class="rounded-2xl overflow-hidden border border-white/10">
+        <img src="imagead2.png" alt="Image Ad 2" class="block w-full h-[550px] object-cover">
+      </div>
     </div>
   </section>
 
@@ -115,44 +131,21 @@
   <section id="designs" class="max-w-6xl mx-auto px-6 py-20">
     <h2 class="text-3xl font-bold mb-6">Designs</h2>
     <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
-      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="undrwrld.jpg" alt="Undrwrld"></div>
-      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="bmw.jpg" alt="BMW"></div>
-      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="skele.png" alt="Skeleton"></div>
-      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="horses.jpg" alt="Horses"></div>
-      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="dog.jpg" alt="Dog"></div>
-    </div>
-  </section>
-
-  <!-- PRICING -->
-  <section id="pricing" class="max-w-6xl mx-auto px-6 py-20">
-    <h2 class="text-3xl font-bold mb-6">Pricing</h2>
-    <div class="grid md:grid-cols-3 gap-8">
-      <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
-        <h3 class="text-xl font-bold">Starter</h3>
-        <p class="text-3xl font-extrabold mt-4 mb-6">$49</p>
-        <ul class="space-y-2 text-neutral-300">
-          <li>1 apparel design</li>
-          <li>1 mockup (tee/hoodie)</li>
-          <li>1 revision</li>
-        </ul>
+      <div class="rounded-2xl overflow-hidden border border-white/10">
+        <img src="undrwrld.jpg" alt="Undrwrld" class="block w-full h-[420px] object-cover">
       </div>
-      <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
-        <h3 class="text-xl font-bold">Growth (Popular)</h3>
-        <p class="text-3xl font-extrabold mt-4 mb-6">$149</p>
-        <ul class="space-y-2 text-neutral-300">
-          <li>3 designs or 5 ad creatives</li>
-          <li>Mockups + export pack</li>
-          <li>2 revisions</li>
-        </ul>
+      <div class="rounded-2xl overflow-hidden border border-white/10">
+        <img src="bmw.jpg" alt="BMW" class="block w-full h-[420px] object-cover">
       </div>
-      <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
-        <h3 class="text-xl font-bold">Creator</h3>
-        <p class="text-3xl font-extrabold mt-4 mb-6">$299/mo</p>
-        <ul class="space-y-2 text-neutral-300">
-          <li>Monthly ad/design pack</li>
-          <li>Priority turnaround</li>
-          <li>Unlimited small tweaks</li>
-        </ul>
+      <div class="rounded-2xl overflow-hidden border border-white/10">
+        <!-- Important: it's skele.png -->
+        <img src="skele.png" alt="Skeleton" class="block w-full h-[420px] object-cover">
+      </div>
+      <div class="rounded-2xl overflow-hidden border border-white/10">
+        <img src="horses.jpg" alt="Horses" class="block w-full h-[420px] object-cover">
+      </div>
+      <div class="rounded-2xl overflow-hidden border border-white/10">
+        <img src="dog.jpg" alt="Dog" class="block w-full h-[420px] object-cover">
       </div>
     </div>
   </section>
